--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,11 @@
 <h2 id="title">Welcome to Ember.js</h2>
 
+<div class="box">
+  <ul>
+    <li class="red">This is red</li>
+    <li class="green">This is green</li>
+    <li class="blue">This is blue</li>
+  </ul>
+</div>
+
 {{outlet}}
